--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-/* styling for Pen, not related to box-sizing or layout */
-
 body {
   font-family: sans-serif;
   font-size: 1.1em;
@@ -57,6 +55,11 @@ body {
   font-family: 'Times New Roman', Times, serif;
   font-weight: bolder;
 }
+
+@media(max-width: 992px){
+  .navbar-expand-lg{
+  background-color: rgb(20, 150, 150);
+  }
 
 p:not(.intro) {
   text-align: justify;
