--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,6 @@ body {
   font-weight: bolder;
 }
 
-@media(max-width: 992px){
-  .navbar-expand-lg{
-  background-color: rgb(20, 150, 150);
-  }
-
 p:not(.intro) {
   text-align: justify;
   color: #7e7e7e;
@@ -109,5 +104,29 @@ div.col-sm-12.col-md-12 p {
 @include media-breakpoint-down(md) {
   .col-md-8 {
     display: block;
+  }
+}
+
+@media(max-width: 992px) {
+  .navbar-expand-lg {
+  background-color:  rgb(20, 150, 150);
+  }
+  .navbar {
+    max-height: none;
+    padding: inherit;
+  }
+  .navbar div {
+    margin: inherit;
+    background-color: rgb(255,255,255);
+  }
+  .navbar-brand {
+    padding: 10px;
+  }
+  button{
+    margin-right: 30px;
+  }
+  button:focus {
+    outline: 1px dotted;
+    outline: auto 5px;
   }
 }
